--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>     
     <body style="background: rgba(238,238,238,1);"> 
         <!--CONTENEUR TOTAL-->         
-        <main aria-hidden="true" class="align-content-md-between align-items-md-stretch container-fluid d-md-inline-flex flex-md-column flex-md-nowrap justify-content-md-between" style="min-height: 100vh; width: 100%; display: flex; z-index: 999; position: fixed; flex-direction: column; justify-content: start;"> 
+        <main aria-hidden="true" class="align-content-md-between align-items-md-stretch container-fluid d-md-inline-flex flex-md-column flex-md-nowrap justify-content-md-between" style="min-height: 100vh; width: 100%; display: flex; position: fixed; flex-direction: column; justify-content: start;"> 
             <!--BARRE DE NAVIGATION-->             
             <div id="barre-haut" class="backgroundMenu row" style="z-index: 9; width: 10%; margin-right: 90%; bottom: 1rem; display: flex; align-items: flex-start; flex-direction: row;"> 
                 <!--LOGO-->                 
@@ -34,7 +34,7 @@
                 <div id="menu" class="col-6 col-lg-7 col-md-7 offset-md-3 offset-lg-3"> 
 </div>                 
             </div>             
-            <div id="contenu" class="row containeur-md d-flex align-items-sm-end justify-content-sm-around" style="min-height: 100vh; flex: 12; width: 100%; z-index: 0; position: fixed;"> 
+            <div id="contenu" class="row containeur-md d-flex align-items-sm-end justify-content-sm-around" style="min-height: 100vh; flex: 12; width: 100%; z-index: 99; position: fixed;"> 
                 <!--CONTENU PAGE-->                 
                 <div id="contenu-page" class="align-content-end align-items-end backgroundForMobile backgroundMobile col-12 col-lg-12 col-md-10 col-sm-8 col-xl-12 d-flex flex-wrap-reverse height-sm justify-content-start order-1 order-lg-1 order-md-2 order-sm-2" style="min-height: 100%; min-width: 100%;"> 
                     <div class="row mt-sm-auto mt-1" style="flex-direction: row; align-items: flex-start; flex-wrap: nowrap; overflow-y: hidden; align-content: flex-start; display: flex;"> 
@@ -440,8 +440,8 @@ padding: 0;">
                             </div>                             
                         </div>                         
                     </div>                     
-                    <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;"> 
-                        <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-lg-column flex-row flex-sm-row justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; max-height: 5rem; right: 0;"> 
+                    <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 0px !important; width: 100%; height: 0%; display: flex; z-index: 999999; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;"> 
+                        <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-lg-column flex-row flex-sm-row justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; max-height: 5rem; right: 0;"> 
                             <div class="align-content-lg-center align-content-md-center align-content-sm-center align-items-lg-center align-items-md-center align-items-sm-center carousel-control-prev col-lg-1 col-md-3 col-xl-1 columnFleche d-lg-flex d-md-flex d-sm-flex ele-nav flex-column flex-lg-column flex-md-column flex-sm-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center"> 
                                 <a href="#carousel" role="button" data-slide="prev" aria-label="prev" class="fleche carousel-control-prev" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
                             </div>                             
