--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Custom styles for this template -->         
         <link href="style.css" rel="stylesheet"> 
         <link href="hover-min.css" rel="stylesheet"> 
-        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic,300,400italic,700,700italic"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700italic,700,500italic,500,400italic,300italic,300,100italic,100"> 
