--- a/index.html
+++ b/index.html
@@ -148,20 +148,20 @@ padding: 0;">
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;"> 
 </div>                                                             
                                                         </div>                                                         
-                                                        <p><em>Ibrahim, MH., Sayagh M., Hassan, AE.(2020).  <a href="pdf/EMSE2020_Docker-Hub.pdf"> 
+                                                        <p><em>Ibrahim, MH., Sayagh M., Hassan, AE.(2020).  <a href="pdf/EMSE2020_Docker-Hub.pdf" rel="noreferrer" target="_blank"> 
                                                             Too many images on DockerHub! How different are images for the same system?</a>, 
                                                             Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Sayagh M., Hassan, AE. (2020).  <a href="pdf/TSE2020_configminer.pdf"> 
+                                                        <p><em>Sayagh M., Hassan, AE. (2020).  <a href="pdf/TSE2020_configminer.pdf" rel="noreferrer" target="_blank"> 
                                                                 ConfigMiner: Identifying the Appropriate Configuration Options for Config-related User Questions by Mining Online Forums </a>, Transactions on Software Engineering (TSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Li, H., Shang, W., Adams, B., Sayagh M., Hassan, AE. (2020).  <a href="pdf/TSE2020_logging.pdf"> 
+                                                        <p><em>Li, H., Shang, W., Adams, B., Sayagh M., Hassan, AE. (2020).  <a href="pdf/TSE2020_logging.pdf" rel="noreferrer" target="_blank"> 
                                                             A Qualitative Study of the Benefits and Costs of Logging from Developers' Perspectives</a>, 
                                                             Transactions on Software Engineering (TSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Lee D., Rajbahadur, GK., Lin D., Sayagh M., Bezemer, CP., Hassan, AE. (2020).  <a href="EMSE2020_mods.pdf"> 
+                                                        <p><em>Lee D., Rajbahadur, GK., Lin D., Sayagh M., Bezemer, CP., Hassan, AE. (2020).  <a href="pdf/EMSE2020_mods.pdf" rel="noreferrer" target="_blank"> 
                                                             An Empirical Study of the Characteristics of Popular Minecraft Mods</a>, Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Sayagh, M., Kerazi, N., Petrillo, F., Bennani, K., and Adams, B. (2020).  <a href="EMSE2020_config2code.pdf"> 
+                                                        <p><em>Sayagh, M., Kerazi, N., Petrillo, F., Bennani, K., and Adams, B. (2020).  <a href="pdf/EMSE2020_config2code.pdf" rel="noreferrer" target="_blank"> 
                                                                 What should your run-time configuration framework do to help developers?</a>, 
                                                             Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). <a href="http://mcis.polymtl.ca/publications/2019/tse.pdf">Software
+                                                        <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). <a href="http://mcis.polymtl.ca/publications/2019/tse.pdf" rel="noreferrer" target="_blank">Software
                                                             Configuration Engineering in Practice -Interviews, Survey,
                                                             and Systematic Literature Review</a>, Transactions on
                                                         Software Engineering (TSE).<a href="http://mcis.polymtl.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
