--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@ padding: 0;">
                                                         <p> </p> 
                                                         <ul> 
                                                             <li> 
+                                                                <a href="https://2021.msrconf.org/" rel="noreferrer" target="_blank">MSR 2021.</a> 
+                                                            </li> 
+                                                            <li> 
                                                                 <a href="https://saner2020.csd.uwo.ca/" rel="noreferrer" target="_blank">SANER 2020.</a> 
                                                             </li>                                                             
                                                             <li> 
