--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@ padding: 0;">
 </div>                                                             
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;"> 
 </div>                                                             
-                                                        </div>                                                         
+                                                        </div>
+                                                         <p><em>Lyu, Y., Li, H., Sayagh, M., Jiang, ZM., Hassan, AE. (2021). <a href="pdf/TOSEM2021.pdf" rel="noreferrer" target="_blank"> 
+                                                            An Empirical Study of the Impact of Data Splitting Decisions on the Performance of AIOps Solutions</a>, 
+                                                            ACM Transactions on Software Engineering and Methodology (TOSEM). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
                                                         <p><em>Ibrahim, MH., Sayagh M., Hassan, AE.(2020).  <a href="pdf/EMSE2020_Docker-Hub.pdf" rel="noreferrer" target="_blank"> 
                                                             Too many images on DockerHub! How different are images for the same system?</a>, 
                                                             Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
